changed some stuff based on feedback

--- a/Image_Basics.ipynb
+++ b/Image_Basics.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Bilderverarbeitung in Python\n",
     "\n",
-    "In diesem Notebook bringen wir Dir ein paar Grundlagen bei, wie man in Python mit Bildern arbeiten kann. Du lernst Bilder zu laden und leicht zu bearbeiten. Damit weißt du dann auch schon alles, um Bilder auf den Quantencomputer zu schicken. \n",
+    "In diesem Notebook bringen wir Dir ein paar Grundlagen bei, wie man in **Python** mit Bildern arbeiten kann. Du lernst Bilder zu laden und leicht zu bearbeiten. Damit weißt du dann auch schon alles, damit wir endlich mit Quantencomputern beginnen können.\n",
     "\n",
-    "Als erstes müssen wir aber noch ein paar sogenannter `imports` machen. Hier importieren wir Funktionen, die andere (oder wir in anderen Dateien) geschrieben haben, damit wir sie in diesem Notebook verwenden können. Du musst in der nächsten Zelle also nichts machen oder sie verstehen. Wichtig ist nur, dass Du sie ausführst, damit der Computer weiß, dass wir gleich diese Funktionen verwenden wollen. Anschließend können wir sie verwenden wie `print()` oder `len()`, die hatten wir ja auch nicht selbst geschrieben. \n",
+    "Als erstes müssen wir aber noch ein paar sogenannter `imports` machen. Hier laden wir Funktionen, die andere (oder wir in anderen Dateien) geschrieben haben, damit wir sie in diesem Notebook verwenden können. Du musst in der nächsten Zelle also nichts machen oder sie verstehen. Wichtig ist nur, dass Du sie ausführst, damit der Computer weiß, dass wir gleich diese Funktionen verwenden wollen. Anschließend können wir sie verwenden wie `print()` oder `len()`, die hatten wir ja auch nicht selbst geschrieben. \n",
     "\n",
     "Danach geht es aber endlich los. "
    ]
@@ -31,20 +31,18 @@
    "id": "dae72f70",
    "metadata": {},
    "source": [
-    "Wie Du wahrscheinlich weißt, sind Bilder aus ganz vielen Pixeln zusammengesetzt. Ein Pixel wiederum besteht bei einem Farbbild aus drei Werten: Rot, Grün, Blau - (im deutschen wie im englischen) kurz: RGB. Bei einem Schwarz-Weiß-Bild besteht ein Pixel sogar nur aus einem Wert. Diese Anzahl wird auch als Anzahl der Farbkanäle bezeichnet.  \n",
+    "Wie Du wahrscheinlich weißt, sind Bilder aus ganz vielen **Pixeln** zusammengesetzt. Ein Pixel wiederum besteht bei einem Farbbild aus drei Werten: Rot, Grün, Blau - kurz: RGB. Bei einem Schwarz-Weiß-Bild besteht ein Pixel nur aus einem Wert. Aus wie vielen Werten ein Pixel besteht, wird auch als die Anzahl der **Farbkanäle** bezeichnet.  \n",
     "Die Werte geben jeweils an, wie stark die Farbe in diesem Bild ist. Aber dazu gleich mehr.\n",
     "\n",
-    "Ein (Farb-)Bild ist also eigentlich eine ganz große Matrix mit drei Dimensionen: \n",
-    "- Höhe vom Bild in Pixeln \n",
-    "- Breite vom Bild in Pixeln \n",
-    "- Anzahl Farbkanäle\n",
+    "Ein Bild kann man sich somit als eine Art Tabelle vorstellen. Diese hat:\n",
+    "- so viele Zeilen wie das Bild hoch ist (in Pixeln)\n",
+    "- so viele Spalten wie das Bild breit ist (in Pixeln) \n",
     "\n",
-    "Ein Schwarz-Weiß-Bild hat damit eigentlich nur zwei Dimension. Somit ist so ein Bild eigentlich eine Tabelle. Mit Zeilen (Höhe vom Bild), Spalten (Breite vom Bild) und in jeder Tabellenposition steht ein Pixelwert. \n",
+    "In einer Tabellenposition stehen dann die Werte dieses Pixels an genau dieser Stelle. Bei einem Schwarz-Weiß-Bild steht da also ein Wert. Bei einem Farbbild drei Werte. \n",
     "\n",
+    "Informatiker und Mathematiker nennen so eine Tabelle auch gerne **Matrix**. Auch in der Schule benutzt man die schon in den oberen Klassenstufen.  \n",
     "\n",
-    "Eine Form, um diese Matrix darzustellen, kennst du sogar schon: die Liste. Denn eine Liste kann auch Listen beinhalten. Somit ist ein Farbbild eine Liste von Listen von Listen. \n",
-    "\n",
-    "Aber machen wir erstmal ein Beispiel, eines Schwarz-Weiß-Bildes. Diese sind folglich \"nur\" eine Liste von Listen."
+    "Eine Form, um diese Matrix darzustellen, kennst du sogar schon: die Liste. Denn eine Liste kann auch Listen beinhalten. Aber machen wir erstmal ein Beispiel eines Schwarz-Weiß-Bildes."
    ]
   },
   {
@@ -62,6 +60,8 @@
    "id": "a8413525",
    "metadata": {},
    "source": [
+    "Wie kannst Du dir das vorstellen? Jeder der \"inneren\" Liste (also `[0, 0, 0]`) stellt eine ganze Zeile dar. Die äußere Liste hält alle diese Zeilen zusammen. Die Pixelwerte sind die Zahlen (hier nur `0`).\n",
+    "\n",
     "Das ist schon ein Bild. Mit dem folgenden Code, können wir ihn uns anzeigen lassen. (Vergiss nicht vorher die Zelle oben drüber ausgeführt zu haben.)"
    ]
   },
@@ -99,7 +99,13 @@
    "id": "6605bd5a",
    "metadata": {},
    "source": [
-    "Jetzt kann man schon viel besser erkennen, was wir da eigentlich gemacht haben. Wir haben eine Liste erzeugt mit vier Elementen. Jedes Element stellt eine Zeile da und beinhaltet drei Schwarz-Weiß-Pixel. `0` bedeutet Schwarz. `255` bedeutet Weiß. \n",
+    "Jetzt kann man schon viel besser erkennen, was wir da eigentlich gemacht haben. \n",
+    "\n",
+    "Die inneren Liste sind ja jeweils eine Zeile. Die Länge dieser Listen gibt also an, wie viele Pixel in einer Zeile sind. \n",
+    "\n",
+    "Wie viele Listen in der äußeren Liste sind, legt fest, wie viele Zeilen es gibt. Ihre Länge ist also die Höhe des Bildes.\n",
+    "\n",
+    "Wie wo du oben sehen kannst bedeutet `0` schwarzes Pixel und `255` weißes Pixel. \n",
     "\n",
     "Mit diesem Wissen guck noch einmal, warum wir durch die `255` an dieser Stelle einen weißen Pixel an dieser Stelle erzeugt hat. \n",
     "\n",
@@ -147,7 +153,8 @@
     "\n",
     "Mit so kleinen Schwarz-Weiß-Bildern ist das mit Listen (von Listen) noch möglich. Danach wird es schnell unübersichtlich, denn \"normale\" Bilder bestehen aus Millionen von Werten. Für den Computer wäre das kein Problem, der kann damit gut umgehen. Aber effektiv kann der damit auch nicht mehr wirklich arbeiten. Deswegen nutzt man sogenannte `arrays` aus dem Paket `numpy`. Pakete beinhalten viele Datentypen und Funktionen aus einem Bereich. Wir nutzen numpy jetzt für Bilder.\n",
     "\n",
-    "Arrays sind einfach nur große Tabellen mit beliebig vielen Dimensionen. Für uns perfekt. \n",
+    "Array, Matrix und Tabelle sind eigentlich genau das gleiche: immer eine Liste von Listen von Listen ... \n",
+    "Wie oft man so Listen verschachtelt nennt man auch seine **Dimension**. Ein Schwarz-Weißbild hat die Dimension `2`, ein Farbbild die Dimension `3`.\n",
     "\n",
     "So laden wir ein Bild von unserem Computer. Den Pfad zu der Datei müssen wir an diese Funktion als String übergeben."
    ]
@@ -167,7 +174,7 @@
    "id": "5d9c5020",
    "metadata": {},
    "source": [
-    "So können wir ein Farbbild anzeigen lassen:\n",
+    "Mit dem nächsten Code, können wir ein Farbbild anzeigen lassen. Damit das funktioniert, musst du erst die vorherige Zelle ausgeführt haben.\n",
     "\n",
     "(Da kommt noch eine komische Zeile Text vor dem Bild. Die kannst du ignorieren.)"
    ]
@@ -189,7 +196,7 @@
    "source": [
     "An der Achsenbeschriftung kannst du hier schon sehen, wie groß dieses Bild in Pixeln ungefähr ist. Da das Bild als numpy array geladen wurde, gibt es aber auch die Möglichkeit `shape` zu benutzen, das uns das exakt für jede Dimension verrät. Ähnlich wie es `len()` bei Listen getan hat. `shape` rufen wir aber direkt auf der Liste mit einem Punkt getrennt auf (das hast du auch schon gesehen. Bei `my_list.append()` um etwas an eine Liste anzuhängen. Da wurde `append()` auch direkt angehängt.). \n",
     "\n",
-    "`shape` ist keine Funktion (sondern ein Attribut, also eine Eigenschaft, die das numpy array hat.). Deswegen gibt es auch nicht, wie sonst, runde Klammern."
+    "`shape` ist keine Funktion, sondern eine Eigenschaft, die das numpy array hat (Informatiker nennen das auch Attribut). Deswegen gibt es auch nicht, wie sonst bei Funktionen, runde Klammern."
    ]
   },
   {
@@ -238,7 +245,7 @@
    "source": [
     "Was bedeutet diese 213? In Zeile 100, in Spalte 150 ist der \"rote Wert\" 213. \n",
     "\n",
-    "**Aufgabe:** Lass Dir mal den grünen und blauen Wert ausgeben. \n",
+    "**Aufgabe:** Lass Dir mal den grünen und blauen Wert an dieser Stelle ausgeben. \n",
     "\n",
     "Du kannst auch mal testen, was passiert, wenn man nur zwei Werte in den eckigen Klammern übergibt. Vergiss nicht: Arrays sind ja auch eine Liste von Listen von Listen ..."
    ]
@@ -256,7 +263,7 @@
    "id": "509fe533",
    "metadata": {},
    "source": [
-    "Genau so wie mit Listen, kann man auch Werte so neu zuweisen. Wir setzen mal ein Pixel Wert komplett auf rot. Also den R Wert auf `255` und G und B auf `0`"
+    "Genau so wie mit Listen, kann man auch Werte so neu zuweisen. Wir setzen mal ein Pixel-Wert komplett auf rot. Also den R Wert auf `255` und G und B auf `0`"
    ]
   },
   {
@@ -280,7 +287,7 @@
    "source": [
     "Ein kleiner roter Punkt ist erschienen!\n",
     "\n",
-    "Jetzt ändern wir mal das komplette Bild, indem wir ihm einen Rotstich verpassen. Das heißt wir erhöhen den Rot-Wert in jedem Pixel um 100. Da müssen wir aber aufpassen, denn kein Wert darf über `255`liegen. \n",
+    "Jetzt ändern wir mal das komplette Bild, indem wir es leicht rötlich einfärben. Dafür erhöhen wir den Rot-Wert in jedem Pixel um 100. Da müssen wir aber aufpassen, denn kein Wert darf über `255` liegen. \n",
     "\n",
     "Um über das Bild zu laufen, nutzen wir zwei `for` Schleifen die ineinander liegen. \n",
     "Versuche mal den folgenden Code zu verstehen. Werfe zur Not noch einmal einen Blick in das andere Notebook. Uns kannst Du natürlich auch immer fragen :)\n",
@@ -301,6 +308,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89104839",
+   "metadata": {},
+   "source": [
+    "Wie du siehst wird `i` mit der äußeren Schleife von `0` auf `4` hochgezählt. Da jeweils der innere Code Block ausgeführt wird, zählt eine weitere Schleife `j` hoch. Wichtig für uns: Jede Kombination kommt genau einmal vor: Alle mögliche Werte von `i` mit allen möglichen Werten von `j`. Genau das nutzen wir, um alle Pixel einmal zu besuchen:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2bd17aa3",
@@ -308,7 +323,7 @@
    "outputs": [],
    "source": [
     "# wir laden noch einmal das Bild. \n",
-    "# Wir haben ja sonst die ganze Zeit diesen roten Punkt\n",
+    "# Wir haben ja sonst die ganze Zeit diesen roten Punkt von eben\n",
     "from copy import copy\n",
     "image = load_image(\"./images/Kitten.jpg\")\n",
     "\n",
@@ -339,7 +354,7 @@
    "source": [
     "Eine rötliche Katze!\n",
     "\n",
-    "**Aufgabe:** Kannst du auch einen Blaustich erzeugen?"
+    "**Aufgabe:** Kannst du die Katze auch leicht bläulich einfärben?"
    ]
   },
   {
@@ -404,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.8 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -418,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
