--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e772074d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello World\")"
    ]
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3aa79545",
    "metadata": {},
    "outputs": [],
@@ -50,6 +42,34 @@
     "\n",
     "# Das hier sind übrigens Kommentare. Diese Zeilen beginnen mit einem # und werden vom Computer ignoriert\n",
     "# Deswegen kann man hier schreiben, was man will und es gibt trotzdem keinen Fehler. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d64bd9d8",
+   "metadata": {},
+   "source": [
+    "Doktorand Christof versucht das auch mal. Führe mal seine Zeile aus."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f44d9d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(Christof)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c02a6c7c",
+   "metadata": {},
+   "source": [
+    "Oh Mist, da hat er wohl etwas falsch gemacht - es gab eine Fehlermeldung. Fehlermeldungen sind immer recht schwer zu verstehen. Frage gerne uns, wenn du eine bekommst. Aber auch hier ist der Computer nicht in Flammen aufgegangen ;) Also probiere in den Notebooks gerne Dinge aus, auch wenn du Dir nicht 100% sicher bist, dass alles stimmt!  \n",
+    "\n",
+    "Kannst du erkennen, was der Fehler von Christof war? Versuche den Fehler zu berichtigen und führe die Zelle erneut aus, um seinen Namen auszugeben. "
    ]
   },
   {
@@ -64,18 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5fe1e4be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = \"Hello World\"\n",
     "print(a)"
@@ -91,19 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6025d304",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a steht gerade für: Hello World\n",
-      "jetzt steht a für: Hello Karlsruhe\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"a steht gerade für:\", a)\n",
     "# wie du siehst, kann man an print() mehrere Sache übergeben, wenn man sie mit einem Komma trennt. \n",
@@ -144,18 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "096e3ba1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = 5 + 6.3\n",
     "print(result)"
@@ -171,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0b2e2ea2",
    "metadata": {},
    "outputs": [],
@@ -218,7 +213,7 @@
     "\n",
     "Zusammen mit Variablen sind Funktionen die Grundlage für das Programmieren. \n",
     "\n",
-    "Auch die kennst du wahrscheinlich schon aus dem Matheunterricht. Ein Beispiel wäre zum Beispiel `y = 3x + 5`. In höheren Klassenstufen schreibt man auch manchmal `f(x) = 3x + 5`. \n",
+    "Auch die kennst du wahrscheinlich schon aus dem Matheunterricht. Ein Beispiel wäre `y = 3x + 5`. In höheren Klassenstufen schreibt man auch manchmal `f(x) = 3x + 5`. \n",
     "\n",
     "Das zeigt auch schon ganz gut, wie es beim Programmieren ist. Hier nimmt eine Funktion, die `f` heißt, einen Wert (oder genauer gesagt eine Variable) `x` und rechnet mit dieser rum und man bekommt ein Ergebnis, zB. `f(2) = 3 * 2 + 5 = 11` für `x = 2`. \n",
     "\n",
@@ -233,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "efa8aaaa",
    "metadata": {},
    "outputs": [],
@@ -262,18 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b63b59ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12.9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var1 = 3\n",
     "var2 = 9.9 \n",
@@ -296,18 +283,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "93f3616c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def f(x):\n",
     "    y = 3 * x + 5\n",
@@ -369,7 +348,12 @@
     "    print(\"Zeile 13\")\n",
     "    \n",
     "if not False:\n",
-    "    print(\"Zeile 16\")"
+    "    print(\"Zeile 16\")\n",
+    "    \n",
+    "b = \"Karlsruhe\"\n",
+    "\n",
+    "if b == \"Karlsruhe\":\n",
+    "    print(\"Zeile 21\")"
    ]
   },
   {
@@ -599,30 +583,17 @@
    "source": [
     "# For-Schleifen\n",
     "\n",
-    "`For`-Schleifen sind neben `if`, Funktionen und Variablen ein weiteres Konzept, das man in fast jeder Programmiersprache findet. Mit ihnen kann man über Dinge \"iterieren\" (also \"drübergehen\") - in unserem Fall also Listen. Eine Schleife führt dabei eine eigene Variable ein (die man auch wieder beliebig benennen kann). Diese Variable nimmt dann jeden Wert einer Liste einmal an und mit diesem kann dann etwas machen. \n",
+    "`For`-Schleifen sind neben `if`-Abfragen, Funktionen und Variablen ein weiteres Konzept, das man in fast jeder Programmiersprache findet. Mit ihnen kann man über Dinge \"iterieren\" (also \"drübergehen\") - in unserem Fall also Listen. Eine Schleife führt dabei eine eigene Variable ein (die man auch wieder beliebig benennen kann). Diese Variable nimmt dann jeden Wert einer Liste einmal an und mit diesem kann dann etwas machen. \n",
     "\n",
-    "Man kann eine Schleife quasi lesen als: `Für jedes Element in der Liste, mache das Folgende:`. Hier mal ein Beispiel. Führe die Zelle aus und gucke, was passiert."
+    "Man kann deswegen folgende Schleife quasi lesen als: `Für jedes Element der Liste \"numbers\", das ich in dem Moment \"n\" nenne, mache das Folgende: print(n)`. Führe die Zelle mal aus und gucke, was passiert."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "58d5ade9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "Liste zu Ende\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numbers = [1, 2, 3, 4, 5]\n",
     "\n",
@@ -636,29 +607,19 @@
    "id": "e6aaa2c9",
    "metadata": {},
    "source": [
-    "Der Code, der für jedes Element ausgeführt werden soll, muss auch wieder eingerückt sein. Die Schleife lässt sich also übersetzen in: \n",
+    "Wie du siehst muss der Code, der für jedes Element ausgeführt werden soll, auch wieder eingerückt sein.\n",
     "\n",
-    "`Für jedes Element der Liste \"numbers\", das ich in dem Moment \"n\" nenne, mache das Folgende: print(n)`.\n",
-    "\n",
-    "Man kann auch kompliziertere Dinge mit den Elementen machen als sie einfach auszugeben. Was aber so nicht funktioniert, ist die Liste zu verändern. Denn `n` ist ja einfach nur ein Name, wie wir das aktuelle Element nennen, aber nicht das Element selbst. \n",
+    "Man kann auch kompliziertere Dinge mit den Elementen machen als sie einfach auszugeben. Was aber so nicht funktioniert, ist die Liste zu verändern. Denn `n` ist ja einfach nur ein Name, wie wir das aktuelle Element nennen, aber nicht dessen Wert. \n",
     "\n",
     "Die folgende Zelle hat also keinen Effekt. `numbers` sieht danach genauso aus wie vorher."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d2195e1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for n in numbers:\n",
     "    n = n + 1\n",
@@ -700,19 +661,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "75f1ce40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4]\n",
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numbers = [0, 1, 2, 3, 4]\n",
     "print(numbers)\n",
