rm some data types

--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "e772074d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World\")"
    ]
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3aa79545",
    "metadata": {},
    "outputs": [],
@@ -54,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5f44d9d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(Christof)"
+    "# print(Christof)"
    ]
   },
   {
@@ -84,10 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "5fe1e4be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"Hello World\"\n",
     "print(a)"
@@ -103,10 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "6025d304",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a steht gerade für: Hello World\n",
+      "jetzt steht a für: Hello Karlsruhe\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"a steht gerade für:\", a)\n",
     "# wie du siehst, kann man an print() mehrere Sache übergeben, wenn man sie mit einem Komma trennt. \n",
@@ -121,18 +146,18 @@
    "id": "3bae06f8",
    "metadata": {},
    "source": [
-    "Variablen haben einen sogenannte **Datentyp**, der sagt, was für eine Art von Wert sie speichern. Einen kennst du schon - nämlich *String*. Das ist quasi der Datentyp für Text. Andere Datentypen sind zum Beispiel *Integer* (ganze Zahlen), *Float* (Kommazahlen) oder *Boolsche Werte* (hier gehen nur die Werte *True* oder *False*, also \"wahr\" oder \"falsch\"). In Python muss man bei der Erstellung einer Variablen aber nicht angeben, was diese für einen Typ hat. Python erkennt das automatisch. Hier ein paar Beispiele: "
+    "Variablen haben einen sogenannte **Datentyp**, der sagt, was für eine Art von Wert sie speichern. Einen kennst du schon - nämlich *String*. Das ist quasi der Datentyp für Text. Andere Datentypen sind zum Beispiel (Komma-) Zahlen oder *Boolsche Werte* (hier gehen nur die Werte *True* oder *False*, also \"wahr\" oder \"falsch\"). In Python muss man bei der Erstellung einer Variablen aber nicht angeben, was diese für einen Typ hat. Python erkennt das automatisch. Hier ein paar Beispiele: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "7d4241db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "var1 = 1 # ein Integer\n",
-    "var2 = 9.0 # ein Float\n",
+    "var1 = 1 # eine Zahl\n",
+    "var2 = 9.1 # ein Kommazahl\n",
     "var3 = True # ein Bool\n",
     "var4 = False # ein Bool"
    ]
@@ -142,15 +167,23 @@
    "id": "8b845189",
    "metadata": {},
    "source": [
-    "Gerade Integer und Floats sind recht ähnlich zur Mathematik. In Python kann man mit diesen sogar rechnen, wie mit einem Taschenrechner:"
+    "Gerade die Zahlen sind recht ähnlich zur Mathematik. In Python kann man mit diesen sogar rechnen, wie mit einem Taschenrechner:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "096e3ba1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.3\n"
+     ]
+    }
+   ],
    "source": [
     "result = 5 + 6.3\n",
     "print(result)"
@@ -183,17 +216,26 @@
     "\n",
     "nicht korrekt ist (denn wenn man auf beiden Seiten des Gleichheitszeichen `x` abzieht, würde da `0 = 1` stehen. Was natürlich nicht stimmt).\n",
     "\n",
-    "Beim Programmieren geht die Zeile `x = x + 1` aber! Denn da wird die Variable `x` auf `x + 1` gesetzt. Auf der rechten Seite wird also der **alte** Wert von `x` genommen und `1` dazugerechnet. Das ist dann der **neue** Wert von `x`.\n",
+    "Beim Programmieren funktioniert allerdings die Zeile `x = x + 1`! Denn da wird die Variable `x` auf `x + 1` gesetzt. Auf der rechten Seite wird also der **alte** Wert von `x` genommen und `1` dazugerechnet. Das ist dann der **neue** Wert von `x`.\n",
     "\n",
     "Das funktioniert natürlich nur wenn die Variable eine Zahl ist. Führe mal die folgende Zelle aus und gucke, was passiert. Statt `1` kannst du auch eine andere Zahl nehmen. Statt `+` funktioniert das auch mit `-`, `*` oder `/`. Probiere es mal aus."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "d6b4edfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alter Wert 4\n",
+      "Neuer Wert 5\n"
+     ]
+    }
+   ],
    "source": [
     "x = 4\n",
     "\n",
@@ -228,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "efa8aaaa",
    "metadata": {},
    "outputs": [],
@@ -257,10 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b63b59ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.9\n"
+     ]
+    }
+   ],
    "source": [
     "var1 = 3\n",
     "var2 = 9.9 \n",
@@ -283,10 +333,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "93f3616c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "def f(x):\n",
     "    y = 3 * x + 5\n",
@@ -328,10 +386,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "2278731a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zeile 2\n",
+      "Zeile 10\n",
+      "Zeile 13\n",
+      "Zeile 16\n",
+      "Zeile 21\n"
+     ]
+    }
+   ],
    "source": [
     "if True:\n",
     "    print(\"Zeile 2\")\n",
@@ -366,10 +436,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "77d48ed0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Große Zahl\n"
+     ]
+    }
+   ],
    "source": [
     "number = 1000\n",
     "\n",
@@ -429,10 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "a51ccd6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 'Hello', True]\n"
+     ]
+    }
+   ],
    "source": [
     "a = 5\n",
     "b = \"Hello\"\n",
@@ -453,10 +539,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "376bbc0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[6, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# Wir definieren eine leere List\n",
     "my_list = [] \n",
@@ -483,10 +578,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "9ee4c214",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adler\n",
+      "Biber\n",
+      "Chameleon\n",
+      "Dachs\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [\"Adler\", \"Biber\", \"Chameleon\", \"Dachs\"]\n",
     "\n",
@@ -506,10 +612,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "35af841c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Adler', 'Biber', 'Chameleon', 'Dackel']\n"
+     ]
+    }
+   ],
    "source": [
     "my_list[3] = \"Dackel\"\n",
     "print(my_list)"
@@ -525,10 +639,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "1b7710ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(my_list))"
    ]
@@ -543,10 +665,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "b0de8222",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mathe', 'Physik']\n",
+      "['Deutsch', 'Englisch', 'Italienisch', 'Spanisch', 'Polnisch']\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [\"Mathe\", \"Physik\"]\n",
     "list2 = [\"Deutsch\", \"Englisch\", \"Italienisch\", \"Spanisch\", \"Polnisch\"]\n",
@@ -590,10 +721,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "58d5ade9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "Liste zu Ende\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 2, 3, 4, 5]\n",
     "\n",
@@ -616,10 +760,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "d2195e1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "for n in numbers:\n",
     "    n = n + 1\n",
@@ -639,10 +791,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "58f09b0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    print(i)"
@@ -661,10 +825,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "75f1ce40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [0, 1, 2, 3, 4]\n",
     "print(numbers)\n",
@@ -712,7 +885,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.10 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -726,11 +899,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "a016c0cab06263cf1ce784a51b6ca9453aa2e7e0116c86131700c7e04108fac5"
    }
   }
  },
