--- a/QolorQoding.ipynb
+++ b/QolorQoding.ipynb
@@ -505,7 +505,7 @@
     "\n",
     "Dann lass uns mal schauen, ob wir das bisherige Wissen über Quanten Computer schon auf Bilder übertragen können.\n",
     "Wir wissen ja jetzt, dass ein `X` Gate den Zustand unseres Qubits einmal umkehrt.\n",
-    "Das können wir nutzen um z.B. den Ausschnit aus unserem Katzenbild zu invertieren, genauso wie wir es in der Aufgabe zuvor gemacht haben.\n",
+    "Das können wir nutzen um z.B. den Ausschnit aus unserem Katzenbild zu invertieren, genauso wie wir es in dem Notebook zuvor gemacht haben.\n",
     "\n",
     "**Aufgabe:** Schreibe eine For-Schleife in der du auf jedes der verfügbaren Qubits ein `X` Gate anwendest"
    ]
