added link to next notebooks

--- a/Image_Basics.ipynb
+++ b/Image_Basics.ipynb
@@ -7,8 +7,22 @@
    "source": [
     "# Bilderverarbeitung in Python\n",
     "\n",
-    "In diesem Notebook bringen wir Dir ein paar Grundlagen bei, wie man in **Python** mit Bildern arbeiten kann. Du lernst Bilder zu laden und leicht zu bearbeiten. Damit weißt du dann auch schon alles, damit wir endlich mit Quantencomputern beginnen können.\n",
-    "\n",
+    "In diesem Notebook bringen wir Dir ein paar Grundlagen bei, wie man in **Python** mit Bildern arbeiten kann. Du lernst Bilder zu laden und leicht zu bearbeiten. Damit weißt du dann auch schon alles, damit wir endlich mit Quantencomputern beginnen können."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7db650b6",
+   "metadata": {},
+   "source": [
+    "[Hier](./Python_Basics.ipynb) findest du übrigens die Grundlagen zur Programmierung mit Python falls du nochmal etwas nachschauen möchtest."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7647ecad",
+   "metadata": {},
+   "source": [
     "Als erstes müssen wir aber noch ein paar sogenannter `imports` machen. Hier laden wir Funktionen, die andere (oder wir in anderen Dateien) geschrieben haben, damit wir sie in diesem Notebook verwenden können. Du musst in der nächsten Zelle also nichts machen oder sie verstehen. Wichtig ist nur, dass Du sie ausführst, damit der Computer weiß, dass wir gleich diese Funktionen verwenden wollen. Anschließend können wir sie verwenden wie `print()` oder `len()`, die hatten wir ja auch nicht selbst geschrieben. \n",
     "\n",
     "Danach geht es aber endlich los. "
@@ -573,6 +587,16 @@
     "        # -------------------------\n",
     "    \n",
     "imshow(image_copy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f78346bd",
+   "metadata": {},
+   "source": [
+    "Klasse! Nachdem du nun ein paar Grundlagen zu Bildverarbeitung kennengelernt hast, können wir mit den Quantencomputern loslegen. Klicke dazu einfach [hier](./Image_Basics.ipynb).\n",
+    "\n",
+    "Wenn du nochmal etwas in den Python grundlagen nachschauen möchtest, kannst du das [hier](./Python_Basics.ipynb) machen."
    ]
   }
  ],
