--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -881,6 +881,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a24fe78",
+   "metadata": {},
+   "source": [
+    "Super! Du hast die Grundlagen für die Programmierung mit Python geschafft und kannst nun zu dem nächsten Notebook über Bildverarbeitung weitermachen. Klicke dazu einfach [hier](./Image_Basics.ipynb)."
+   ]
   }
  ],
  "metadata": {
