--- a/QolorQoding.ipynb
+++ b/QolorQoding.ipynb
@@ -42,6 +42,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7d2c181",
+   "metadata": {},
+   "source": [
+    "[Hier](./Image_Basics.ipynb) findest du übrigens die Grundlagen zur Bildverarbeitung falls du nochmal etwas nachschauen möchtest."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "70ed34b6",
    "metadata": {},
    "source": [
@@ -1074,9 +1082,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "work",
+   "display_name": "Python 3.10.10 ('.venv': poetry)",
    "language": "python",
-   "name": "work"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1088,7 +1096,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
