--- a/Image_Basics.ipynb
+++ b/Image_Basics.ipynb
@@ -594,7 +594,7 @@
    "id": "f78346bd",
    "metadata": {},
    "source": [
-    "Klasse! Nachdem du nun ein paar Grundlagen zu Bildverarbeitung kennengelernt hast, können wir mit den Quantencomputern loslegen. Klicke dazu einfach [hier](./Image_Basics.ipynb).\n",
+    "Klasse! Nachdem du nun ein paar Grundlagen zu Bildverarbeitung kennengelernt hast, können wir mit den Quantencomputern loslegen. Klicke dazu einfach [hier](./QolorQoding.ipynb).\n",
     "\n",
     "Wenn du nochmal etwas in den Python grundlagen nachschauen möchtest, kannst du das [hier](./Python_Basics.ipynb) machen."
    ]
