fixed some expl

--- a/Image_Basics.ipynb
+++ b/Image_Basics.ipynb
@@ -596,7 +596,7 @@
    "source": [
     "Klasse! Nachdem du nun ein paar Grundlagen zu Bildverarbeitung kennengelernt hast, können wir mit den Quantencomputern loslegen. Klicke dazu einfach [hier](./QolorQoding.ipynb).\n",
     "\n",
-    "Wenn du nochmal etwas in den Python grundlagen nachschauen möchtest, kannst du das [hier](./Python_Basics.ipynb) machen."
+    "Wenn du nochmal etwas in den Python Grundlagen nachschauen möchtest, kannst du das [hier](./Python_Basics.ipynb) machen."
    ]
   }
  ],
