--- a/Image_Basics.ipynb
+++ b/Image_Basics.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "9a49e042",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fca030e1ea0>"
+       "<matplotlib.image.AxesImage at 0x7f5f211294b0>"
       ]
      },
      "execution_count": 8,
@@ -374,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fca03376710>"
+       "<matplotlib.image.AxesImage at 0x7f5f2121f9d0>"
       ]
      },
      "execution_count": 11,
@@ -466,7 +466,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fca01781fc0>"
+       "<matplotlib.image.AxesImage at 0x7f5f20fc57e0>"
       ]
      },
      "execution_count": 13,
@@ -544,17 +544,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "39c4b135",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fca03067250>"
+       "<matplotlib.image.AxesImage at 0x7f5f2065d060>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
