--- a/Image_Basics.ipynb
+++ b/Image_Basics.ipynb
@@ -580,11 +580,10 @@
     "for row in range(image.shape[0]): # hier iterieren wir über alle Zeilen und nennen die aktuelle row\n",
     "    for column in range(image.shape[1]): # hier über alle Spalten und nennen die aktuelle column\n",
     "        # --- Ab hier dein Code ---\n",
-    "        image_copy[row, column, 0] = 255 - image_copy[row, column, 0] # R\n",
-    "        image_copy[row, column, 1] = 255 - image_copy[row, column, 1] # G\n",
-    "        image_copy[row, column, 2] = 255 - image_copy[row, column, 2] # B\n",
+    "        \n",
     "        \n",
     "        # -------------------------\n",
+    "        pass\n",
     "    \n",
     "imshow(image_copy)"
    ]
