chore: move images to image folder

--- a/QolorQoding.ipynb
+++ b/QolorQoding.ipynb
@@ -673,7 +673,7 @@
     "Stell dir jetzt einfach vor, im klassischen haben wir nur einen Strich an dessen Endpunkten entweder `0` oder `1` steht. Genau diese und nur diese beide Zustände können wir einnehmen.\n",
     "Im Quantencomputing haben wir nun für ein Qubit die Möglichkeit als Zustand jeden erdenklichen Punkt auf der Oberfläche einer Kugel einzunehmen. \n",
     "\n",
-    "![Bit und Qubit Darstellung](qbits.png)\n"
+    "![Bit und Qubit Darstellung](images/qbits.png)\n"
    ]
   },
   {
@@ -696,13 +696,14 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c23dc4db",
    "metadata": {},
    "source": [
     "Schauen wir doch mal ob das stimmt. Im folgenden erzeugen wir ein Quantum Circuit auf das wir sogenannte `h` Gates anwenden. Die bringen uns von unserem Grundzustand nämlich genau auf den Äquator:\n",
     "\n",
-    "![Plus-State](plusstate.png)"
+    "![Plus-State](images/plusstate.png)"
    ]
   },
   {
